--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+TWILIO_SID=ACb087b82d3024be08fa3d6aefff4e526b
+TWILIO_TOKEN=f0b4bc84bb75ddaf5e0be0e538900b39
