--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@
 
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
 TWILIO_SID=ACb087b82d3024be08fa3d6aefff4e526b
-TWILIO_TOKEN=f0b4bc84bb75ddaf5e0be0e538900b39
+TWILIO_TOKEN=8c54c04b78f0ec844fb61e3ea9c8b00b
+TWILIO_MSID=MG64d0a388aa7e7cb9e636277272475f89
+MY_PHONE=+8201099683613
