--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
+    "twilio": "^3.84.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
