--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ TWILIO_SID=ACb087b82d3024be08fa3d6aefff4e526b
 TWILIO_TOKEN=8c54c04b78f0ec844fb61e3ea9c8b00b
 TWILIO_MSID=MG64d0a388aa7e7cb9e636277272475f89
 MY_PHONE=+8201099683613
+
+SENDGRID_KEY=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
